check_errors.log
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:17:71
   |
17 | ...t, StaticManifest, StaticNode, StaticStateEntry,
   |                       ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:18:5
   |
18 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:18:21
   |
18 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

warning: `ranvier-core` (lib) generated 3 warnings
warning: unused import: `ranvier_core::outcome::Outcome`
 --> ranvier-job\src\job.rs:4:5
  |
4 | use ranvier_core::outcome::Outcome;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `ranvier-job` (lib) generated 1 warning (run `cargo fix --lib -p ranvier-job` to apply 1 suggestion)
    Checking job-scheduler-demo v0.7.0 (F:\project\ranvier\ranvier-workspace\ranvier\examples\job-scheduler-demo)
error[E0433]: failed to resolve: could not find `async_trait` in the list of imported crates
  --> examples\job-scheduler-demo\src\main.rs:10:1
   |
10 | #[transition]
   | ^^^^^^^^^^^^^ could not find `async_trait` in the list of imported crates
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: could not find `async_trait` in the list of imported crates
  --> examples\job-scheduler-demo\src\main.rs:18:1
   |
18 | #[transition]
   | ^^^^^^^^^^^^^ could not find `async_trait` in the list of imported crates
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `job`
  --> examples\job-scheduler-demo\src\main.rs:41:22
   |
41 |     let health_job = job::AxonJob::new("health-check-1", health_trigger, health_axon, (), ());
   |                      ^^^ use of unresolved module or unlinked crate `job`
   |
   = help: if you wanted to use a crate named `job`, use `cargo add job` to add it to your `Cargo.toml`
help: consider importing this struct
   |
 1 + use ranvier_job::job::AxonJob;
   |
help: if you import `AxonJob`, refer to it directly
   |
41 -     let health_job = job::AxonJob::new("health-check-1", health_trigger, health_axon, (), ());
41 +     let health_job = AxonJob::new("health-check-1", health_trigger, health_axon, (), ());
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `job`
  --> examples\job-scheduler-demo\src\main.rs:49:28
   |
49 |     let cleanup_job_task = job::AxonJob::new("cleanup-db", cleanup_trigger, cleanup_axon, (), ());
   |                            ^^^ use of unresolved module or unlinked crate `job`
   |
   = help: if you wanted to use a crate named `job`, use `cargo add job` to add it to your `Cargo.toml`
help: consider importing this struct
   |
 1 + use ranvier_job::job::AxonJob;
   |
help: if you import `AxonJob`, refer to it directly
   |
49 -     let cleanup_job_task = job::AxonJob::new("cleanup-db", cleanup_trigger, cleanup_axon, (), ());
49 +     let cleanup_job_task = AxonJob::new("cleanup-db", cleanup_trigger, cleanup_axon, (), ());
   |

error[E0195]: lifetime parameters or bounds on method `run` do not match the trait declaration
   --> examples\job-scheduler-demo\src\main.rs:10:14
    |
 10 |   #[transition]
    |                ^ lifetimes do not match method in trait
    |
   ::: F:\project\ranvier\ranvier-workspace\ranvier\core\src\transition.rs:121:5
    |
121 | /     async fn run(
122 | |         &self,
123 | |         state: From,
124 | |         resources: &Self::Resources,
125 | |         bus: &mut Bus,
126 | |     ) -> Outcome<To, Self::Error>;
    | |__________________________________- lifetimes in impl do not match this method in trait
    |
    = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0195]: lifetime parameters or bounds on method `run` do not match the trait declaration
   --> examples\job-scheduler-demo\src\main.rs:18:14
    |
 18 |   #[transition]
    |                ^ lifetimes do not match method in trait
    |
   ::: F:\project\ranvier\ranvier-workspace\ranvier\core\src\transition.rs:121:5
    |
121 | /     async fn run(
122 | |         &self,
123 | |         state: From,
124 | |         resources: &Self::Resources,
125 | |         bus: &mut Bus,
126 | |     ) -> Outcome<To, Self::Error>;
    | |__________________________________- lifetimes in impl do not match this method in trait
    |
    = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `new` found for struct `Axon<(), String, anyhow::Error>` in the current scope
  --> examples\job-scheduler-demo\src\main.rs:39:58
   |
39 |     let health_axon = Axon::<(), String, anyhow::Error>::new("HealthCheck").then(health_check);
   |                                                          ^^^ function or associated item not found in `Axon<(), String, anyhow::Error>`
   |
   = note: the function or associated item was found for
           - `Axon<In, In, E, Res>`

error[E0599]: no function or associated item named `new` found for struct `Axon<(), String, anyhow::Error>` in the current scope
  --> examples\job-scheduler-demo\src\main.rs:46:59
   |
46 |     let cleanup_axon = Axon::<(), String, anyhow::Error>::new("CleanupTask").then(cleanup_job);
   |                                                           ^^^ function or associated item not found in `Axon<(), String, anyhow::Error>`
   |
   = note: the function or associated item was found for
           - `Axon<In, In, E, Res>`

Some errors have detailed explanations: E0195, E0433, E0599.
For more information about an error, try `rustc --explain E0195`.
error: could not compile `job-scheduler-demo` (bin "job-scheduler-demo") due to 8 previous errors
